--- a/themes/hugo-uno/layouts/partials/comments.html
+++ b/themes/hugo-uno/layouts/partials/comments.html
@@ -1,6 +1,4 @@
-{{ if .Site.Params.muut }}
 <section class="post-comments">
-<a class="muut" href="https://muut.com/i/{{ .Site.Params.muut }}/comments:{{ .Title }}">Comments</a>
-<script src="//cdn.muut.com/1/moot.min.js"></script>
+	<a class="muut" href="https://muut.com/i/tylerdavisinfo/comments:{{ .Title }}">Comments</a>
+	<script src="//cdn.muut.com/1/moot.min.js"></script>
 </section>
-{{ end }}
