--- a/themes/detox/static/css/main.css
+++ b/themes/detox/static/css/main.css
@@ -72,3 +72,10 @@
     visibility: hidden;
     display: block;
 }
+
+article.li {
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(153,153,153,0.4);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(153,153,153,0.4);
+    box-shadow: 0px 0px 5px 0px rgba(153,153,153,0.4);
+    padding: 30px;
+}
